--- a/examples/plugins/org.jboss.tools.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.project.examples/plugin.xml
@@ -15,4 +15,29 @@
 		icon="icons/examples_wiz.gif">	
 	</wizard>
   </extension>
+  <extension
+         point="org.eclipse.ui.commands">
+      <command
+            name="Project Examples"
+            id="org.jboss.tools.project.examples">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            commandId="org.jboss.tools.project.examples"
+            class="org.jboss.tools.project.examples.actions.ProjectExamplesHandler">
+      </handler>
+   </extension>
+  <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="menu:help?after=group.tutorials">
+            <command
+                  commandId="org.jboss.tools.project.examples"
+                  id="org.jboss.tools.project.examples">
+            </command>
+                        
+      </menuContribution>
+   </extension>
 </plugin>
