--- a/examples/plugins/org.jboss.tools.project.examples.cheatsheet/build.properties
+++ b/examples/plugins/org.jboss.tools.project.examples.cheatsheet/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                cheatsheets/,\
-               plugin.properties
+               plugin.properties,\
+               about.html
