https://jira.jboss.org/browse/JBIDE-6293 Add Maven Portletbridge 2.0.0 FINAL library provider
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@22105 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.core/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.properties
@@ -11,3 +11,5 @@ Maven_Portlet_1_0_Libraries=Maven Portlet 1.0 Libraries
 Maven_Portlet_2_0_Libraries=Maven Portlet 2.0 Libraries
 Maven_Portletbridge_2_0_0_ALPHA_Libraries=Maven Portletbridge 2.0.0 ALPHA Libraries
 Maven_Portletbridge_2_0_0_ALPHA_Libraries_with_Dependencies=Maven Portletbridge 2.0.0 ALPHA Libraries with Dependencies
+Maven_Portletbridge_2_0_0_FINAL_Libraries=Maven Portletbridge 2.0.0 FINAL Libraries
+Maven_Portletbridge_2_0_0_FINAL_Libraries_with_Dependencies=Maven Portletbridge 2.0.0 FINAL Libraries with Dependencies
