--- a/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
@@ -2,6 +2,7 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = Integration Seam projects with Maven
 Seam_Project_configurator = Seam Project configurator
+CDI_Project_configurator = CDI Project configurator
 JSF_Project_configurator = JSF Project configurator
 Portlet_Core_Project_configurator = Portlet Core Project configurator
 JBoss_Maven_Integration = JBoss Maven Integration
