https://jira.jboss.org/browse/JBIDE-6487 Add Maven Hibernate Configurator
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@22902 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.seam/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.seam/plugin.xml
@@ -23,6 +23,13 @@
     
     <extension point="org.maven.ide.eclipse.projectConfigurators">
       <configurator 
+          id="org.jboss.tools.maven.cdi.configurator"
+          class="org.jboss.tools.maven.seam.configurators.HibernateProjectConfigurator"
+          name="%Hibernate_Project_configurator" priority="250"/>
+    </extension>
+    
+    <extension point="org.maven.ide.eclipse.projectConfigurators">
+      <configurator 
           id="org.jboss.tools.maven.jsf.configurator"
           class="org.jboss.tools.maven.seam.configurators.JSFProjectConfigurator"
           name="%JSF_Project_configurator" priority="150"/>
