--- a/examples/site/pom.xml
+++ b/examples/site/pom.xml
@@ -6,8 +6,9 @@
 		<artifactId>org.jboss.tools.parent.pom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>org.jboss.tools</groupId>
-	<artifactId>examples.site</artifactId> 
+	<groupId>org.jboss.tools.examples</groupId>
+	<artifactId>site</artifactId> 
+	<name>examples.site</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-update-site</packaging>
 </project>
