--- a/examples/tests/org.jboss.tools.project.examples.test/pom.xml
+++ b/examples/tests/org.jboss.tools.project.examples.test/pom.xml
@@ -7,8 +7,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	  <artifactId>org.jboss.tools.parent.pom</artifactId>
 	  <version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>org.jboss.tools</groupId>
+	<groupId>org.jboss.tools.examples.tests</groupId>
 	<artifactId>org.jboss.tools.project.examples.test</artifactId> 
 	<version>1.1.0-SNAPSHOT</version>
 	<packaging>eclipse-test-plugin</packaging>
+
+	<properties>
+		<emma.filter>org.jboss.tools.project.examples*</emma.filter>
+		<emma.instrument.bundles>org.jboss.tools.project.examples</emma.instrument.bundles>
+	</properties>
 </project>
