maven repo structure changed to match svn repo
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@23167 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/site/pom.xml
+++ b/maven/site/pom.xml
@@ -6,8 +6,9 @@
 		<artifactId>org.jboss.tools.parent.pom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>org.jboss.tools</groupId>
-	<artifactId>maven.site</artifactId> 
+	<groupId>org.jboss.tools.maven</groupId>
+	<artifactId>site</artifactId> 
+	<name>maven.site</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-update-site</packaging>
 </project>
