--- a/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
@@ -14,4 +14,19 @@
       provider="maven-library-provider"
       class="org.jboss.tools.maven.ui.internal.libprov.MavenUserLibraryProviderInstallPanel"/>
   </extension>
+  
+  <extension
+        point="org.eclipse.ui.preferencePages">
+     <page
+           category="org.jboss.tools.common.model.ui.MainPreferencePage"
+           class="org.jboss.tools.maven.ui.preferences.ConfiguratorPreferencePage"
+           id="org.jboss.tools.maven.ui.preferences.ConfiguratorPreferencePage"
+           name="%JBoss_Maven_Integration"/>
+    </extension>
+    
+    <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer class="org.jboss.tools.maven.ui.preferences.ConfiguratorPreferencesInitializer"/>
+   </extension>
+   
 </plugin>
