add org.jboss.tools.maven.jsf to pom
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@23235 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/pom.xml
+++ b/maven/plugins/pom.xml
@@ -8,6 +8,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.tools.maven.core</module>
+		<module>org.jboss.tools.maven.jsf</module>
 		<module>org.jboss.tools.maven.seam</module>
 		<module>org.jboss.tools.maven.ui</module>
 	</modules>
