--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -8,6 +8,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.tools.maven.feature</module>
+		<module>org.jboss.tools.maven.jsf.feature</module>
 		<module>org.jboss.tools.maven.seam.feature</module>
 	</modules>
 </project>
