https://jira.jboss.org/browse/JBIDE-6576 Move JBoss Maven configurators to separate features
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@23265 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -10,6 +10,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<module>org.jboss.tools.maven.feature</module>
 		<module>org.jboss.tools.maven.jsf.feature</module>
 		<module>org.jboss.tools.maven.seam.feature</module>
+		<module>org.jboss.tools.maven.cdi.feature</module>
+		<module>org.jboss.tools.maven.hibernate.feature</module>
+		<module>org.jboss.tools.maven.portlet.feature</module>
 	</modules>
 </project>
 	
