https://jira.jboss.org/browse/JBIDE-6715 add org.jboss.tools.maven.ui.bot.test
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@23977 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/tests/pom.xml
+++ b/maven/tests/pom.xml
@@ -7,6 +7,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
+		<module>org.jboss.tools.maven.ui.bot.test</module>
 	</modules>
 </project>
 	
