--- a/maven/plugins/org.jboss.tools.maven.core/build.properties
+++ b/maven/plugins/org.jboss.tools.maven.core/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                poms/,\
                OSGI-INF/l10n/bundle.properties,\
-               plugin.properties
+               plugin.properties,\
+               about.html
