--- a/maven/plugins/org.jboss.tools.maven.core/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.xml
@@ -15,12 +15,30 @@
   	  <project-facet-version facet="jboss.m2" version="1.0">
       	<constraint>
          	<or>
-                <requires facet="jst.ear" version="[5.0"/>
-                <requires facet="jst.ejb" version="[3.0"/>
-	            <requires facet="jst.web" version="[2.5"/>
-    	        <requires facet="jst.utility" version="[1.0"/>
-				<requires facet="jst.appclient" version="[1.2"/>
-				<requires facet="jst.connector" version="[1.0"/>
+                <requires
+                      facet="jst.ear"
+                      soft="true"
+                      version="[5.0"/>
+                <requires
+                      facet="jst.ejb"
+                      soft="true"
+                      version="[3.0"/>
+	            <requires
+                   facet="jst.web"
+                   soft="true"
+                   version="[2.5"/>
+    	        <requires
+                   facet="jst.utility"
+                   soft="true"
+                   version="[1.0"/>
+				<requires
+          facet="jst.appclient"
+          soft="true"
+          version="[1.2"/>
+				<requires
+          facet="jst.connector"
+          soft="true"
+          version="[1.0"/>
          	</or>
          </constraint>
       </project-facet-version>
