--- a/examples/plugins/org.jboss.tools.project.examples/plugin.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/plugin.properties
@@ -6,3 +6,4 @@ Project_Examples_wizard = Project Examples
 Project_Examples_command =Project Examples...
 ProjectExamples=Project Examples file
 Project_Examples = Project Examples
+JBoss_Tools_31_Community_Examples = JBoss Tools 3.1 Community Examples
