--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
@@ -5,7 +5,7 @@
   <extension
         point="org.jboss.tools.project.examples.projectExamplesXml"
         name="%JBoss_Tools_Community_Examples">
-        <url>http://anonsvn.jboss.org/repos/jbosstools/workspace/examples/project-examples-3.1.xml </url>
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-community-3.1.xml</url>
         <experimental>false</experimental>
    </extension>
    <extension
