--- a/examples/site/pom.xml
+++ b/examples/site/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.examples</groupId>
-	<artifactId>site</artifactId> 
+	<artifactId>examples.site</artifactId> 
 	<name>examples.site</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-update-site</packaging>
