--- a/maven/site/pom.xml
+++ b/maven/site/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.maven</groupId>
-	<artifactId>site</artifactId> 
+	<artifactId>maven.site</artifactId> 
 	<name>maven.site</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-update-site</packaging>
