--- a/maven/plugins/org.jboss.tools.maven.seam/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.seam/plugin.xml
@@ -14,4 +14,13 @@
           name="%Seam_Project_configurator" priority="200"/>
     </extension>
     
+    <extension point="org.maven.ide.eclipse.projectConfigurators">
+      <configurator 
+          id="org.jboss.tools.maven.seam.configurator.fixClasspathConfigurator"
+          class="org.jboss.tools.maven.seam.configurators.FixClasspathConfigurator"
+          name="%Seam_Project_configurator" priority="300"/>
+    </extension>
+    
+    
+    
 </plugin>
