--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
@@ -1,4 +1,5 @@
 BundleVendor = JBoss by Red Hat
 BundleName = JBoss Tools Community Project Examples
 JBoss_Tools_Community_Examples = JBoss Tools 3.1 Community Examples
+JBoss_Tools_Community_Maven_Examples = JBoss Tools 3.2 Community Maven Examples
 JBoss_Tools_Community_BPEL_Examples=JBoss Tools Community BPEL Examples
