--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
@@ -18,4 +18,10 @@
        false
     </experimental>
  </extension>
+ <extension
+        point="org.jboss.tools.project.examples.projectExamplesXml"
+        name="%JBoss_Tools_Community_Maven_Examples">
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-maven-3.2.xml</url>
+        <experimental>false</experimental>
+   </extension>
 </plugin>
