--- a/maven/plugins/org.jboss.tools.maven.project.examples/pom.xml
+++ b/maven/plugins/org.jboss.tools.maven.project.examples/pom.xml
@@ -6,8 +6,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	  <artifactId>org.jboss.tools.parent.pom</artifactId>
 	  <version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>org.jboss.tools.maven.features</groupId>
-	<artifactId>org.jboss.tools.maven.project.examples.feature</artifactId> 
+	<groupId>org.jboss.tools.maven.plugins</groupId>
+	<artifactId>org.jboss.tools.maven.project.examples</artifactId> 
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>eclipse-feature</packaging>
+	<packaging>eclipse-plugin</packaging>
 </project>
