--- a/maven/plugins/org.jboss.tools.maven.cdi/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.cdi/plugin.properties
@@ -1,3 +1,4 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven CDI Configurator
-CDI_Project_configurator = CDI Project configurator
+CDI_Project_configurator_WTP = CDI Project configurator (WTP)
+CDI_Project_configurator_JDT = CDI Project configurator (JDT)
