--- a/maven/plugins/org.jboss.tools.maven.hibernate/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.hibernate/plugin.properties
@@ -1,4 +1,4 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven Hibernate Configurator
-Hibernate_Project_configurator = Hibernate Project configurator
+Hibernate_Project_configurator = Hibernate
 
