--- a/maven/plugins/org.jboss.tools.maven.jsf/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.jsf/plugin.properties
@@ -1,3 +1,3 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven JSF Configurator
-JSF_Project_configurator = JSF Project configurator
+JSF_Project_configurator = JSF
