--- a/maven/features/org.jboss.tools.maven.test.feature/pom.xml
+++ b/maven/features/org.jboss.tools.maven.test.feature/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.maven.features</groupId>
-	<artifactId>org.jboss.tools.maven.tests.feature</artifactId>
+	<artifactId>org.jboss.tools.maven.test.feature</artifactId>
 
 	<packaging>eclipse-feature</packaging>
 </project>
