--- a/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
@@ -213,5 +213,12 @@
       </navigatorContent>
    </extension>
   -->
-  
+    <extension point="org.eclipse.ui.perspectiveExtensions">
+ 	    <perspectiveExtension
+ 	 	    targetID="org.jboss.tools.common.ui.JBossPerspective">
+ 	 	    <newWizardShortcut
+ 	 	         id="org.eclipse.m2e.core.wizards.Maven2ProjectWizard">
+ 	 	         </newWizardShortcut>
+ 	 	</perspectiveExtension>
+ 	</extension>
 </plugin>
