CODING IN PROGRESS - issue JBIDE-9921: Investigate if we can add quickfixes for missing dependencies/packages based on JDT and M2E error markers https://issues.jboss.org/browse/JBIDE-9921
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36491 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
@@ -221,4 +221,14 @@
  	 	         </newWizardShortcut>
  	 	</perspectiveExtension>
  	</extension>
+
+	<!-- TODO implement marker resolution as part of JBIDE-9921 	
+    <extension 
+        point="org.eclipse.ui.ide.markerResolution">
+        <markerResolutionGenerator
+            class="org.jboss.tools.maven.ui.internal.problems.MavenDependencyMarkerResolutionGenerator"
+            markerType="org.eclipse.m2e.core.maven2Problem.dependency">
+        </markerResolutionGenerator>
+    </extension>
+    --> 	
 </plugin>
