JBIDE-9850 feeds should be cached so it doesnt show blank when opening up the second time
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36545 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.central/plugin.xml
@@ -132,6 +132,14 @@
             name="WTP Runtime Preferences"
             id="org.jboss.tools.wtp.runtime.preferences">
       </command>
+      <command
+      		name="Warning"
+            id="org.jboss.tools.central.newsWarning">
+      </command>
+      <command
+      		name="Warning"
+            id="org.jboss.tools.central.blogsWarning">
+      </command>
       
    </extension>
    
