fix typo in pom - org.jboss.tools.comunity.central.feature -> org.jboss.tools.community.central.feature
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36645 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/features/pom.xml
+++ b/central/features/pom.xml
@@ -15,7 +15,7 @@
 	<modules>
 		<module>org.jboss.tools.central.feature</module>
 		<module>org.jboss.tools.central.discovery.feature</module>
-		<module>org.jboss.tools.comunity.central.feature</module>
+		<module>org.jboss.tools.community.central.feature</module>
 	</modules>
 </project>
 	
