JBIDE-9921: Add quickfixes for missing dependencies based on M2E error markers. Quickfixes will open documentation pages on jboss.org
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36676 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.ui/plugin.xml
@@ -222,13 +222,18 @@
  	 	</perspectiveExtension>
  	</extension>
 
-	<!-- TODO implement marker resolution as part of JBIDE-9921 	
-    <extension 
+	<extension 
         point="org.eclipse.ui.ide.markerResolution">
         <markerResolutionGenerator
-            class="org.jboss.tools.maven.ui.internal.problems.MavenDependencyMarkerResolutionGenerator"
+            class="org.jboss.tools.maven.ui.internal.markers.MavenDependencyMarkerResolutionGenerator"
             markerType="org.eclipse.m2e.core.maven2Problem.dependency">
         </markerResolutionGenerator>
     </extension>
-    --> 	
+    <extension 
+        point="org.eclipse.ui.ide.markerResolution">
+        <markerResolutionGenerator
+            class="org.jboss.tools.maven.ui.internal.markers.MavenDependencyMarkerResolutionGenerator"
+            markerType="org.eclipse.m2e.core.maven2Problem.pomloading">
+        </markerResolutionGenerator>
+    </extension>
 </plugin>
