--- a/maven/tests/org.jboss.tools.maven.configurators.tests/.settings/org.eclipse.m2e.core.prefs
+++ b/maven/tests/org.jboss.tools.maven.configurators.tests/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-#Tue Aug 02 13:44:10 CEST 2011
+#Mon Nov 28 08:59:23 CET 2011
 activeProfiles=
 eclipse.preferences.version=1
 resolveWorkspaceProjects=true
