JBIDE-9776 : Fixed package selection in page 1 updating the groupId in page 2. The advanced section is displayed if specific maven profiles are set changed the wizard icon
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36772 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.project.examples/build.properties
+++ b/maven/plugins/org.jboss.tools.maven.project.examples/build.properties
@@ -8,4 +8,6 @@ bin.includes = META-INF/,\
                about.ini,\
                about.mappings,\
                about.properties,\
-               jboss_about.png
+               jboss_about.png,\
+               icons/
+src.includes = src/
