JBIDE-10071 added description to feature.xml
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36832 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/features/org.jboss.tools.central.feature/feature.properties
+++ b/central/features/org.jboss.tools.central.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Central
+description=JBoss Central provides a central hub for new and experienced users to get access to quickstarts, projects, documentation resources, news blogs and access to easy installation of recommended additonal plugins.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2011 Red Hat, Inc. and others.\nAll rights reserved. This program and the accompanying materials\n 
