--- a/central/plugins/org.jboss.tools.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.central/plugin.xml
@@ -31,6 +31,7 @@
            name="JBoss Central"/>
    </extension>
 
+   <!--
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
@@ -40,10 +41,24 @@
                   icon="icons/jboss.gif"
                   id="org.jboss.tools.central.show">
             </command>
-                        
       </menuContribution>
    </extension>
-   
+   -->
+   <extension point="org.eclipse.ui.actionSets">
+		<actionSet
+				id="org.jboss.tools.central"
+				label="JBoss Central"
+				visible="true">
+			<action
+					class="org.jboss.tools.central.actions.ShowJBossCentralHandler"
+					icon="icons/jboss.gif"
+					id="org.jboss.tools.central.actions.ShowJBossCentralHandler"
+					label="JBoss Central"
+					toolbarPath="org.eclipse.ui.workbench.help/group.application"
+					menubarPath="help/group.intro"
+					tooltip="JBoss Central" />
+		</actionSet>
+   </extension>   
    <extension
          point="org.eclipse.ui.commands">
       <command
