--- a/central/plugins/org.jboss.tools.community.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.community.central/plugin.xml
@@ -5,7 +5,7 @@
          point="org.jboss.tools.central.tutorials">
       <category 
       		id="org.jboss.tools.central.jbossas.quickstart"
-      		name="JBoss AS 7 Quickstarts"
+      		name="JBoss Quickstarts"
       		description="These quickstarts are aimed to get you up to writing applications with minimal fuss. We recommend that you work through the quickstarts in the order they are presented in this guide, however if you have previous experience with Java EE 6, you may wish to skip some or all of the quickstarts."
       		priority="2" />
       <!--
